# PeTaL

./: pyproject.toml
djangoFrameworktutorial/env/Scripts/: activate  activate.bat  activate.xsh  django-admin.py
django_prototype/: Dockerfile  Pipfile  docker-compose.yml  manage.py
django_prototype/_main/: apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
django_prototype/_site/: asgi.py  settings.py  urls.py  wsgi.py
django_prototype/_site/_settings/: __init__.py  base.py  dev.py  prod.py
django_prototype/bird/: endpoints.py  urls.py  utils.py  views.py
django_prototype/bird/models/: __init__.py  article.py  entity.py  serializer.py  species.py
django_prototype/petal/: manage.py
django_prototype/petal/_petal/: asgi.py  settings.py  urls.py  wsgi.py
django_prototype/petal/api/: models.py  serializers.py  utils.py
django_prototype/petal/bird/: apps.py  endpoints.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
django_prototype/petal/home/: tests.py  urls.py  views.py
django_prototype/petal/templates/: map.html  (+1 more)
django_prototype/petalusers/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py
django_prototype/search/: indexer.py  jobs.py  models.py  query.py
django_prototype/templates/: navbar.html
petal/: qBIRD.py
site/api/: errors.py  models.py  serializers.py  utils.py
site/bird/: endpoints.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
site/home/: tests.py  urls.py  views.py
site/petal_site/: asgi.py  settings.py  urls.py  wsgi.py
site/templates/: navbar.html
(+55 files in other folders)
