[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["keikojima02 <kei.kojima02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
djangorestframework = "^3.11.0"
djangorestframework-api-key = "^2.0.0"
django-neomodel = "^0.0.4"
sphinx = "^3.1.2"
psycopg2 = "^2.8.5"
unipath = "^1.1"
uuid = "^1.30"
elasticsearch = "^7.8.0"
celery = "^4.4.6"
django-allauth = "^0.42.0"
beautifulsoup4 = "^4.9.1"
nltk = "^3.5"
spacy = "^2.3.2"
django-rest-auth = "^0.9.5"
six = "^1.15.0"
soup = "^0.1.0"
markdown = "^3.2.2"
django-filter = "^2.3.0"
neobolt = "^1.7.17"
neo4j = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
